--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,14 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@studio-freight/lenis": "^1.0.42",
+    "aos": "^2.3.4",
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "framer-motion": "^6.5.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-headroom": "^3.2.1",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3"
