--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-headroom": "^3.2.1",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
